# Collision

./: Cargo.toml  Makefile  README.md  README.rst  eslint.config.js  exec.sh  index.html  package-lock.json  package.json  style.css  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
include/: boundary.h  cell.h  common.h  config.h  debug.h  event.h  io.h  logging.h  output.h  particle.h  struct.h
input/: init_manually.py
input/RandomGenerator/: Makefile  exec.sh
input/RandomGenerator/include/: common.h  particle.h
input/RandomGenerator/src/: common.c  config.c  main.c  particle.c
npm-scripts/: prepare.sh
script/: canvas2d.ts  dom.ts  main.ts  timer.ts  urlSearchParams.ts  webgl.ts
script/webgl/: context.ts  program.ts  resizeEvent.ts  vbo.ts
shader/: fragmentShader.es2.glsl  fragmentShader.es3.glsl  fragmentShader.glsl  vertexShader.es2.glsl  vertexShader.es3.glsl  vertexShader.glsl
src/: common.c  config.c  debug.c  drawer.rs  lib.rs  logging.c  main.c  main.rs  myvec.rs  output.c  random.rs  simulator.rs
src/boundary/: finalise.c  init.c  internal.h  list.c
src/cell/: finalise.c  init.c  list.c
src/event/: cancel.c  finalise.c  get_event_time.c  init.c  internal.h  min_heap.c  plan.c  process.c
src/io/: entrypoint.c  snpyio.h
src/particle/: finalise.c  init.c  list.c  param.c  update.c
src/simulator/: cell.rs  debug.rs  event.rs  extrema.rs  particle.rs  scheduler.rs  util.rs
src/simulator/event/: inter_particle_collision.rs  (+5 more)
typescript/: main.ts
visualise/: pyqt.py
visualise/3d/: Makefile  README.rst
(+13 files in other folders)
